--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "next": "14.1.3",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.11.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
