--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-lazy-load": "^4.0.1",
+    "react-lazyload": "^3.2.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
