--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "@supabase/supabase-js": "^2.42.0",
     "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.19.2",
     "next": "14.1.3",
     "pg": "^8.11.3",
     "react": "^18",
@@ -25,6 +28,8 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/pg": "^8.11.2",
     "@types/react": "^18",
