--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
